# zafferdb

./: CMakeLists.txt  README.md
include/: Database.h  FileHandler.h  Parser.h  Tokenizer.h
src/: Database.cpp  FileHandler.cpp  Parser.cpp  Tokenizer.cpp  client.cpp  main.cpp  server.cpp
